// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Payment should redirect 1`] = `
Array [
  Array [
    Object {
      "continueUrl": "[\\"Adyen-Redirect\\",\\"redirectUrl\\",\\"mocked_url\\",\\"merchantReference\\",\\"mocked_orderNo\\",\\"signature\\",\\"mocked_signature\\"]",
      "error": false,
    },
  ],
]
`;

exports[`Payment should return 3d json response 1`] = `
Array [
  Array [
    Object {
      "continueUrl": "[\\"Adyen-Adyen3D\\",\\"IssuerURL\\",\\"mocked_url\\",\\"PaRequest\\",\\"mocked_PaReq\\",\\"MD\\",\\"mocked_MD\\",\\"merchantReference\\",\\"mocked_orderNo\\",\\"signature\\",\\"mocked_signature\\"]",
      "error": false,
    },
  ],
]
`;

exports[`Payment should return 3ds2 json response 1`] = `
Array [
  Array [
    Object {
      "continueUrl": "[\\"Adyen-Adyen3DS2\\",\\"resultCode\\",\\"IdentifyShopper\\",\\"orderNo\\",\\"mocked_orderNo\\"]",
      "error": false,
      "order": Object {
        "getPaymentInstruments": [MockFunction],
        "orderNo": "mocked_orderNo",
      },
    },
  ],
]
`;

exports[`Payment should return json with error details when payment is unsuccessful 1`] = `
Array [
  Array [
    Object {
      "error": true,
      "errorMessage": "mocked_error.payment.not.valid",
    },
  ],
]
`;
